🐛 Fixed icon stroke not always aligned with icon

--- a/frontend/shared/scss/components/icons.scss
+++ b/frontend/shared/scss/components/icons.scss
@@ -76,8 +76,10 @@
     &.stroke {
         &:before {
             position: absolute;
+            line-height: 1;
         }
         &:after {
+            line-height: 1;
             color: $color-background;
             color: var(--color-current-background, #{$color-background});
             -webkit-text-stroke: 5px $color-background;
